--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "type": "contao-module",
     "homepage": "http://avisota.org",
     "require": {
-        "php": ">=5.3",,
+        "php": ">=5.3",
         "contao/core": ">=2.11.11,<3.5",
         "contao-community-alliance/composer-plugin": "~2.0",
         "avisota/contao-core": "~2.0",
