--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     ],
     "support": {
-        "email": "baumann.sv@gmail.com",
+        "email": "support@avisota.org",
         "issues": "https://github.com/avisota/contao-css-to-inline-style/issues",
         "forum": "https://community.contao.org/de/forumdisplay.php?121-Avisota",
         "wiki": "http://de.contaowiki.org/Kategorie:Avisota",
