--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "php": ">=5.4",
         "contao/core": ">=3.5,<3.6",
         "contao-community-alliance/composer-plugin": "~2.4",
-        "avisota/contao-core": "~3.0",
-        "avisota/contao-message": "~3.0",
+        "avisota/contao-core": "dev-release/3.1.0",
+        "avisota/contao-message": "dev-release/3.2.0",
         "tijsverkoyen/css-to-inline-styles": "~1.5"
     },
     "require-dev": {
