--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "avisota/contao-css-to-inline-style",
     "description": "Avisota newsletter replace css to inline styles",
+    "version": "3.1.x-dev",
     "keywords": [
         "avisota",
         "email",
@@ -17,8 +18,8 @@
         "php": ">=5.4",
         "contao/core": ">=3.5,<3.6",
         "contao-community-alliance/composer-plugin": "~2.4",
-        "avisota/contao-core": "dev-release/3.1.0",
-        "avisota/contao-message": "dev-release/3.2.0",
+        "avisota/contao-core": "3.1.x-dev",
+        "avisota/contao-message": "3.2.x-dev",
         "tijsverkoyen/css-to-inline-styles": "~1.5"
     },
     "require-dev": {
@@ -59,7 +60,8 @@
             }
         },
         "branch-alias": {
-            "dev-develop": "3.0.x-dev"
+            "dev-develop": "3.0.x-dev",
+            "dev-release/3.1.0": "3.1.x-dev"
         }
     }
 }
