--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "type": "contao-module",
     "homepage": "http://avisota.org",
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.4,<7",
         "contao/core": ">=3.5,<3.6",
         "contao-community-alliance/composer-plugin": "~2.4",
         "avisota/contao-core": "~3.1",
