--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,16 @@
     "type": "contao-module",
     "homepage": "http://avisota.org",
     "require": {
-        "php": ">=5.4,<7",
-        "contao/core": ">=3.5,<3.6",
-        "contao-community-alliance/composer-plugin": "~2.4",
-        "avisota/contao-core": "~3.1",
-        "tijsverkoyen/css-to-inline-styles": "~2.0"
+        "php": "^5.6",
+        "contao/core": "^3.5.5",
+        "contao-community-alliance/composer-plugin": "^2.4",
+        "contao-community-alliance/dc-general": "^2.0@beta",
+        "contao-community-alliance/events-create-options": "^1.0@dev",
+        "avisota/contao-core": "^3.1",
+        "tijsverkoyen/css-to-inline-styles": "^2.0"
     },
     "require-dev": {
-        "phpcq/all-tasks": "~1.1"
+        "phpcq/all-tasks": "^1.2"
     },
     "license": "LGPL-3.0-or-later",
     "authors": [
